deprecate fix and modernizeing
Modernize deprecated features where applicable – now, /warn remove, /warn removeall, and /warn info display warned players in tab completion.